<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eT1"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eT2"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A3"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT3"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A4"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT4"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A5"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT5"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A5"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A6"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A6"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A7"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT7"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A7"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A8"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT8"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A8"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A9"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT9"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A9"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A10"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT10"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A10"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A11"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT11"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A11"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A12"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT12"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A12"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A13"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eT13"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/A13"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="Finish" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Insert the words!"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>